fix layout issues

--- a/app/globals.css
+++ b/app/globals.css
@@ -41,7 +41,7 @@ input {
 }
 
 .input{
-    @apply border border-gray-300/50 rounded-full px-3 py-2 md:py-1.5 bg-gray-300/10 w-full
+    @apply border border-gray-300/50 rounded-full px-3 py-2 md:py-1.5 bg-gray-300/10 w-full md:w-fit
 }
 
 .gradient-border {
